YR-7 fix : upload